# petite-vllm

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
artifacts/lesson01/: debug_rope.py  notes.md
examples/: 01_02_generation.py  01_basic_generation.py  03_paged_kv_cache.py
petvllm/: config.py  llm.py
petvllm/cache/: block_kv_cache.py  block_pool.py  kv_cache.py  kv_cache_manager.py
petvllm/engine/: llm_engine.py  model_runner.py  request.py  scheduler.py
petvllm/layers/: activation.py  embed_head.py  layernorm.py  linear.py  rotary_embedding.py  sampler.py
petvllm/metrics/: __init__.py  metrics.py
petvllm/models/: __init__.py  qwen3.py
